# ToolInstall

./: .clangd  CMakeLists.txt  CMakePresets.json  MayaGather.manifest  main.cpp  test.py  win_exe.rc
CMake/: FindMaya.cmake
Source/: command_source.h
include/: file.h
python/: Toolshelf.py  dynButton.py  rigButton.py  shareButton.py  shelf.py
script/maya/: CMakeLists.txt  maya_plugin.cpp  maya_plugin.h
src/: file.cpp  file.h  maya_plugin.cpp  maya_plugin.h  架构.md
vcpkg/: CMakeLists.txt
